# aashto-plastic-pipe-check

./: AASHTO plastic pipe structural calcs.xlsx  LICENSE  aashto_plastic_pipe_check.py  pyproject.toml
test/: test_check.py
